# initial-repo-cpp

./: CMakeLists.txt  StrongType.hpp
.github/workflows/: testing.yml
src/: main.cpp
test/: test.cpp
